// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket Icon render the disabled ticket icon 1`] = `
<span>
  Ticket Inactive
</span>
`;

exports[`Ticket Icon render the ticket icon 1`] = `
<span>
  Ticket Active
</span>
`;

exports[`Ticket Icon render the unlimited icon 1`] = `
<span>
  Clock Active
</span>
`;

exports[`Ticket Icon render the unlimited icon when is disabled 1`] = `
<span>
  Clock Inactive
</span>
`;
